--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "com.zaidbashir.hospitalbackend",
   "version": "1.0.0",
   "description": "Backend For Hospital Management System",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run dev",
+    "dev": "nodemon run"
   },
   "keywords": [
     "Node",
@@ -12,5 +14,18 @@
     "MongoDB"
   ],
   "author": "Zaid Bashir",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
+    "nodemon": "^3.1.3",
+    "validator": "^13.12.0"
+  }
 }
